--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "haibibotto",
-  "version": "0.0.2",
+  "name": "node-teamcity",
+  "version": "0.0.3",
   "description": "Scrapes the integration server for pending changes.",
   "main": "index.js",
   "scripts": {
