--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "moment": "2.14.1",
+    "moment-timezone": "0.5.5",
     "request-promise": "3.0.0",
     "sprintf-js": "1.0.3",
     "underscore": "1.8.3",
